app/css/pyra.css
/* ... */
.input-group .form-control {
	padding-left: 10px;
}

label {
	font-weight: 400;
	color: #33383f;
}

.input-group-addon:active, .input-group .form-control:active, .input-group-addon:focus, .input-group .form-control:focus, .form-control:active, .form-control:focus {
	border-radius: 1px;
	border: 1px solid #009abd;
	box-shadow: none;
}

label:active, label:hover {
	font-weight: 400;
	color: #009abd;
}

.search-icon {
	z-index: 2;
}

textarea::-webkit-input-placeholder {
	color: #5a616b;
	}
	
	textarea:-moz-placeholder { /* Firefox 18- */
	color: #5a616b;  
	}
	
	textarea::-moz-placeholder {  /* Firefox 19+ */
	color: #5a616b;  
	}
	
	textarea:-ms-input-placeholder {
	color: #5a616b;  
	}

.upload-files {
	background-color: #F5F5F4;
	border: 1px solid #ccd1d9;
	padding: 10px;
	margin-bottom: 15px;
}

.form-control {
	border-radius: 1px;
	-webkit-appearance: none;
}

.placeholder {
	color: #CCD1D9;
}

.search-box .btn-link {
	padding: 7px 9px 5px 9px;
	border: 1px solid #ccd1d9;
	border-width: 1px 1px 1px 0px;
	background-color: white;
}

.search-box .form-control {
	border: 1px solid #ccd1d9;
	border-width: 1px 0px 1px 1px;
	position: relative;
	z-index: 0;
}

/* tabs */

/* primary */

.primary-tabs {
	border-bottom: 1px solid #e7e7e6; 
	width: 100%;
}

.primary-tabs.nav-tabs li a{
	background-color: #e7e6e6;
	border-bottom-color: #e6e6e5;
	border-bottom-width: 1px;
	border-radius: 1px;
	color: #5A616B;
	border-bottom: 1px solid #e7e7e6; 
}

.primary-tabs .nav-tabs li i{
	 color: #5A616B;
 }

 .primary-tabs .nav-tabs .active i {
	color: #009abd;
 }

 .primary-tabs.nav-tabs>li.active>a, .primary-tabs.nav-tabs>li.active>a:focus, .primary-tabs.nav-tabs>li.active>a:hover {
	color: #009abd;
}

/* secondary */

.secondary-tabs {
	border-bottom: 1px solid #e7e7e6; 
	width: 100%;
	margin-bottom: 15px;
}

.secondary-tabs .nav-tabs li a {
	border: none;
	border-bottom: 1px solid #e6e6e5;
	color: #989fa8;
	background-color: white;
	margin: 0;
}

.secondary-tabs .nav-tabs li a i {
	color: #989fa8;
}

.secondary-tabs .nav-tabs li.active a, .secondary-tabs .nav-tabs li a:hover {
	border: none;
	border-bottom: 1px solid #009abd;
	color: #009abd;
}

.secondary-tabs .nav-tabs li a i:hover {
	color: #009abd;
}

.secondary-tabs .nav-tabs li.active a i {
	color: #009abd;
}

/* tiles */

.pyra-tile {
	cursor: pointer;
}

.nav-tile-positive {
	border: 1px solid #989fa8;
	border-radius: 1px;
	padding: 15px;
	height: 178px;
	position: relative;
}

.nav-tile-negative {
	border: 1px solid #318CA1;
	background-color: #009abd;
	border-radius: 1px;
	padding: 15px;
	height: 178px;
	color: white;
	position: relative;
}

.nav-tile-negative:hover {
	border: 1px solid #318CA1;
	background-color: #318CA1;
	border-radius: 1px;
	padding: 15px;
	height: 178px;
	color: white;
	position: relative;
}

.nav-tile-negative h4 {
	color: white;
	left: 15px;
	bottom: 15px;
	position: absolute;
	width: 80px;
}

.nav-tile-negative .module-icon {
	color: white;
	font-size: 36px;
	margin-top: 30px;
}

.nav-tile-negative .nav-arrow {
	color: white;
	font-size: 26px;
	right: 15px;
	bottom: 15px;
	position: absolute;
}

.counter-tile-neutral {
	border: 1px solid #ccd1d9;
	border-radius: 1px;
	background-color: white;
	padding: 15px;
	height: 69px;
	position: relative;
}

.counter-tile-neutral i, .counter-tile-success i, .counter-tile-warning i, .counter-tile-danger i {
	color: #5a616b;
}

.counter-tile-neutral:hover {
	background-color: #F5F5F4;
}

.counter-tile-success {
	border: 1px solid #ccd1d9;
	border-radius: 1px;
	background-color: #f5fbf7;
	padding: 15px;
	height: 69px;
	position: relative;
}

.counter-tile-success:hover {
	cursor: not-allowed;
}

.counter-tile-warning {
	border: 1px solid #ccd1d9;
	border-radius: 1px;
	background-color: #FEF8F1;
	padding: 15px;
	height: 69px;
	position: relative;
}

.counter-tile-warning:hover {
	background-color: #fac096;
}

.counter-tile-danger {
	border: 1px solid #ccd1d9;
	border-radius: 1px;
	background-color: #FDF6F6;
	padding: 15px;
	height: 69px;
	position: relative;
}

.counter-tile-danger:hover {
	background-color: #e9a2a6;
}

/* icons */

.fa-check-circle {
	color: #35ae63 !important;
}

.fa-minus-circle {
	color: #5a616b !important;
}

.fa-exclamation-circle {
	color: #f88a3b !important;
}

.fa-exclamation-triangle {
	color: #bd2532 !important;
}

.fa-info-circle {
	color: #009abd !important;
}

/* table */

.table {
	margin: 0;
	width: 100%;
}

.seperator {
	margin: 0px 5px;
	color: #989FA8;
}

thead th {
	background-color: #009abd;
	color: white;
	border: 0px solid gray;
}

thead tr {
	border: 0px solid gray;
}

tbody tr {
	border: 0px solid gray;
	cursor: pointer;
}

.table-toolbar {
	margin-bottom: 10px;
	height: 18px;
}

.table-toolbar p, .table-toolbar .btn-link-action, .table-toolbar .btn-link-action i {
	color: #5a616b;
	font-size: 12px;
}

.table-toolbar strong {
	width: 100%;
	margin-bottom: 15px;
	height: 14px;
	color: #5a616b;
	font-size: 12px;
	font-weight: 700;
}

.table-toolbar .show-count {
	height: 18px;
	width: 44px;
	font-size: 10px;
	padding: 0px 6px;
	margin-left: 3px;
	border: 1px solid #979ea8;
}

.pagination>li:first-child>a, .pagination>li:first-child>span, .pagination>li:last-child>a, .pagination>li:last-child>span {
	border-radius: 1px;
}
.pagination i {
	color: #979ea8;
}

.pagination li a {
	color: #979ea8;
}

.pagination li .active {
	color: white;
	background-color: #009abd;
}

.pagination li .inactive, .pagination li .inactive i{
	color: #ccd1d9;
	background-color: #F5F5F4;
}

/* panel header */

.panel, .panel-group .panel {
	border-radius: 1px;
	box-shadow: none;
}

.panel-heading {
	padding-top: 12px;
	padding-bottom: 8px;
	position: relative;
}

.panel p {
	margin: 0;
}

.panel .label {
	color: #33383f;
	font-size: 14px;
	padding: 0px;
	font-weight: 600;
	margin-bottom: 10px;
}

.panel-action {
	float: right;
	top: 10px;
	right: 15px;
	position: absolute;
}

.expanded-section {
	background-color: #F5F5F4;
	padding: 15px 0px;
	margin-bottom: -15px;
}
/* ... */

